@@ -1,0 +1,61 @@
+ansi
+ansi_c
+ansi_c99
+c_lang
+checktree
+cloneAST
+cloneCheck
+clonePrint
+cloneTypedAST
+computeLUB
+declTypeCheck
+disableArgDepLookup
+disableFBodyInst
+doNotCompareArgsToParams
+doNotOperatorOverload
+dumpfinal
+eagerFBodyInst
+expect_confused_bail
+expect_xfailure
+gIC
+gSC
+gnu2_kandr_c_lang
+gnu_c89
+gnu_kandr_c_lang
+identityReclassify
+malloc_stats
+marshalToOcaml
+msvcBugs
+mtype
+no-elaborate
+no-typecheck
+nohashline
+nowarnings
+only_works_on_32bit
+overload
+parseTree
+parseXml
+permissive
+prettyPrint
+printAST
+printAsML
+printElabAST
+printHierarchies
+printTypedAST
+secondTcheck
+serialNumbers
+stopAfterElab
+stopAfterParse
+stopAfterTCheck
+structure
+templateDebug
+testClone
+testDebugPrint
+test_xfatal
+tokens
+treeCheck
+trivialActions
+xmlPrintAST
+xmlPrintAST-indent
+xmlPrintAST-lowered
+xmlPrintAST-types
